Resolved problem where form would hide behind navbar. Added a div that displays a success message when the user submits a bug report.

--- a/BugBountyFE/src/app/components/leaderboard/leaderboard.component.css
+++ b/BugBountyFE/src/app/components/leaderboard/leaderboard.component.css
@@ -22,6 +22,4 @@
     margin-top: 1em;
     margin-bottom: 5 em;
     color: white;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
     }
